Fix minor routing issues