@@ -2,6 +2,7 @@ package com.icthh.xm.gate.gateway.ratelimiting;
 
 import com.icthh.xm.gate.config.ApplicationProperties;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.cloud.client.discovery.ReactiveDiscoveryClient;
 import org.springframework.cloud.gateway.discovery.DiscoveryClientRouteDefinitionLocator;
 import org.springframework.cloud.gateway.discovery.DiscoveryLocatorProperties;
@@ -10,8 +11,9 @@ import org.springframework.cloud.gateway.route.RouteDefinition;
 import org.springframework.stereotype.Component;
 import reactor.core.publisher.Flux;
 
-import java.util.Collections;
-import java.util.Objects;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 import static com.icthh.xm.gate.config.Constants.BURST_CAPACITY;
@@ -21,6 +23,7 @@ import static com.icthh.xm.gate.config.Constants.KEY_RESOLVER;
 import static com.icthh.xm.gate.config.Constants.REPLENISH_RATE;
 import static com.icthh.xm.gate.config.Constants.REQUESTED_TOKENS;
 import static com.icthh.xm.gate.utils.RouteUtils.clearRouteId;
+import static java.util.stream.Collectors.groupingBy;
 
 /**
  * This class is used to enrich routes, discovered by consul, with RequestRateLimiter filter.
@@ -30,13 +33,20 @@ import static com.icthh.xm.gate.utils.RouteUtils.clearRouteId;
 @Component
 public class DiscoveryClientRouteDefinitionLocatorEnhancer extends DiscoveryClientRouteDefinitionLocator {
 
-    private final ApplicationProperties applicationProperties;
+    private final Map<String, List<ApplicationProperties.RedisRateLimiterProperties>> rateLimitFilterConfig;
 
     public DiscoveryClientRouteDefinitionLocatorEnhancer(ReactiveDiscoveryClient discoveryClient,
                                                          DiscoveryLocatorProperties properties,
                                                          ApplicationProperties applicationProperties) {
         super(discoveryClient, properties);
-        this.applicationProperties = applicationProperties;
+
+        this.rateLimitFilterConfig = Optional.ofNullable(applicationProperties.getRedisRateLimiter())
+            .stream()
+            .flatMap(Collection::stream)
+            .filter(route -> StringUtils.isNotEmpty(route.getRouteId()))
+            .collect(groupingBy(ApplicationProperties.RedisRateLimiterProperties::getRouteId));
+
+        log.info("Configured {} routes", this.rateLimitFilterConfig.keySet());
     }
 
     @Override
@@ -46,12 +56,13 @@ public class DiscoveryClientRouteDefinitionLocatorEnhancer extends DiscoveryClie
 
     private RouteDefinition enrichRouteDefinition(RouteDefinition routeDefinition) {
         String routeId = clearRouteId(routeDefinition.getId()); // ReactiveCompositeDiscoveryClient adds prefix to the route IDs to avoid naming conflicts and clearly indicate their origin
-        var redisRateLimiterProperties = applicationProperties.getRedisRateLimiter();
 
-        if (Objects.nonNull(redisRateLimiterProperties)) {
-            Optional.ofNullable(redisRateLimiterProperties.get(routeId)).orElse(Collections.emptyList())
-                .forEach(properties -> addRateLimitingFilter(routeId, routeDefinition, properties));
-        }
+        List<ApplicationProperties.RedisRateLimiterProperties> properties = rateLimitFilterConfig.getOrDefault(routeId, List.of());
+
+        log.info("for route={} found={} properties", routeDefinition.getId(), properties.size());
+
+        properties.forEach(rateLimiter -> addRateLimitingFilter(routeId, routeDefinition, rateLimiter));
+
         return routeDefinition;
     }
 
@@ -60,7 +71,7 @@ public class DiscoveryClientRouteDefinitionLocatorEnhancer extends DiscoveryClie
         FilterDefinition filterDefinition = buildRateLimiterFilter(properties);
         routeDefinition.getFilters().add(filterDefinition);
 
-        log.debug("Successfully added RequestRateLimiter filter with parameters: replenishRate = {}, "
+        log.info("Successfully added RequestRateLimiter filter with parameters: replenishRate = {}, "
             + "burstCapacity = {}, requestedTokens = {}, key-resolver = {}, deny-empty-key = {} to route with id: {}",
             properties.getReplenishRate(), properties.getBurstCapacity(), properties.getRequestedTokens(),
             properties.getKeyResolver(), properties.getDenyEmpty(), routeId);
@@ -69,9 +80,9 @@ public class DiscoveryClientRouteDefinitionLocatorEnhancer extends DiscoveryClie
     private static FilterDefinition buildRateLimiterFilter(ApplicationProperties.RedisRateLimiterProperties args) {
         FilterDefinition filterDefinition = new FilterDefinition();
         filterDefinition.setName(FILTER_NAME);
-        filterDefinition.addArg(REPLENISH_RATE, args.getReplenishRate());
-        filterDefinition.addArg(BURST_CAPACITY, args.getBurstCapacity());
-        filterDefinition.addArg(REQUESTED_TOKENS, args.getRequestedTokens());
+        filterDefinition.addArg(REPLENISH_RATE, String.valueOf(args.getReplenishRate()));
+        filterDefinition.addArg(BURST_CAPACITY, String.valueOf(args.getBurstCapacity()));
+        filterDefinition.addArg(REQUESTED_TOKENS, String.valueOf(args.getRequestedTokens()));
         filterDefinition.addArg(KEY_RESOLVER, args.getKeyResolver());
         filterDefinition.addArg(DENY_EMPTY, args.getDenyEmpty());
 
